--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,11 @@
 *.tar.gz
 *.rar
 
-#virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-
-#ideafiles
-.idea/
+# Intellij files
+GeeksForGeeksProblems.iml
+.idea
 .idea/misc.xml
-.idea/vcs.xml
+out
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
