--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,9 @@
 *.rar
 
 # Intellij files
-out/
+.idea
+.idea/misc.xml
+out
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
